fix: solve Fab readability issue

--- a/src/components/FAB/FAB.css
+++ b/src/components/FAB/FAB.css
@@ -8,4 +8,6 @@
   border: none;
   font-size: 1.3rem;
   cursor: pointer;
+  color: #ddd;
+  background-color: #333;
 }
